--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -111,6 +111,7 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2.0.0
         with:
+          micromamba-version: '2.0.2-2'
           environment-file: ${{ env.CONDA_ENV_FILE }}
           environment-name: xarray-tests
           cache-environment: true
