--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -304,7 +304,8 @@ jobs:
     name: Minimum Version Policy
     runs-on: "ubuntu-latest"
     needs: detect-ci-trigger
-    if: needs.detect-ci-trigger.outputs.triggered == 'false'
+    # disabled until `conda` is compatible with the new `libmambapy`
+    if: false && needs.detect-ci-trigger.outputs.triggered == 'false'
     defaults:
       run:
         shell: bash -l {0}
