--- a/pyproject.toml
+++ b/pyproject.toml
@@ -245,6 +245,7 @@ ignore = [
   "E501",
   "E731",
   "UP007",
+  "PERF20",
   "RUF001",
   "RUF002",
   "RUF003",
@@ -259,6 +260,7 @@ extend-select = [
   "W",
   "TID", # flake8-tidy-imports (absolute imports)
   "I", # isort
+  "PERF", # Perflint
   "PGH", # pygrep-hooks
   "RUF",
   "UP", # Pyupgrade
