Use micromamba 1.5.10 together with conda for min-version-policy, since conda.api and libmambapy are not API compatible

--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -304,8 +304,6 @@ jobs:
     name: Minimum Version Policy
     runs-on: "ubuntu-latest"
     needs: detect-ci-trigger
-    # disabled until `conda` is compatible with the new `libmambapy`
-    if: false && needs.detect-ci-trigger.outputs.triggered == 'false'
     defaults:
       run:
         shell: bash -l {0}
@@ -318,13 +316,15 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          micromamba-version: ${{env.MICROMAMBA_VERSION}}
+          # run with micromamba 1.5.10 together with conda
+          # conda.api is not API compatible with libmambapy
+          micromamba-version: 1.5.10
           environment-name: xarray-tests
           create-args: >-
             python=3.12
             pyyaml
             python-dateutil
-            libmambapy
+            conda
 
       - name: All-deps minimum versions policy
         run: |
