--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -318,7 +318,7 @@ jobs:
         with:
           # run with micromamba 1.5.10 together with conda
           # conda.api is not API compatible with libmambapy
-          micromamba-version: 1.5.10
+          micromamba-version: "1.5.10-0"
           environment-name: xarray-tests
           create-args: >-
             python=3.12
