--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -36,7 +36,7 @@ jobs:
           create-args: >-
             asv
             python-build
-            mamba
+            mamba <=1.5.10
 
 
       - name: Run benchmarks
