--- a/pyproject.toml
+++ b/pyproject.toml
@@ -246,6 +246,7 @@ ignore = [
   "E731",
   "UP007",
   "PERF20",
+  "PIE790",  # unnecessary pass statement
   "RUF001",
   "RUF002",
   "RUF003",
@@ -260,6 +261,7 @@ extend-select = [
   "TID", # flake8-tidy-imports (absolute imports)
   "I", # isort
   "PERF", # Perflint
+  "PIE", # flake8-pie
   "PGH", # pygrep-hooks
   "RUF",
   "UP", # Pyupgrade
