--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -14,7 +14,6 @@ concurrency:
 
 env:
   FORCE_COLOR: 3
-  MICROMAMBA_VERSION: "2.0.2-2"
 
 jobs:
   detect-ci-trigger:
@@ -58,7 +57,6 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -104,7 +102,6 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -156,7 +153,6 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -213,7 +209,6 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -270,7 +265,6 @@ jobs:
       - name: Setup micromamba
         uses: mamba-org/setup-micromamba@v2
         with:
-          micromamba-version: ${{env.MICROMAMBA_VERSION}}
           environment-file: ${{env.CONDA_ENV_FILE}}
           environment-name: xarray-tests
           create-args: >-
@@ -304,6 +298,7 @@ jobs:
     name: Minimum Version Policy
     runs-on: "ubuntu-latest"
     needs: detect-ci-trigger
+    if: needs.detect-ci-trigger.outputs.triggered == 'false'
     defaults:
       run:
         shell: bash -l {0}
