--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -303,6 +303,9 @@ jobs:
       run:
         shell: bash -l {0}
 
+    env:
+      COLUMNS: 120
+
     steps:
       - uses: actions/checkout@v4
         with:
