unpin array-api-strict, as issues are resolved upstream

--- a/ci/requirements/environment-windows.yml
+++ b/ci/requirements/environment-windows.yml
@@ -2,7 +2,7 @@ name: xarray-tests
 channels:
   - conda-forge
 dependencies:
-  - array-api-strict<=2.1
+  - array-api-strict
   - boto3
   - bottleneck
   - cartopy
