--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,8 +50,8 @@ dev = [
   "sphinx_autosummary_accessors",
   "xarray[complete]",
 ]
-io = ["netCDF4", "h5netcdf", "scipy", 'pydap; python_version<"3.10"', "zarr", "fsspec", "cftime", "pooch"]
 etc = ["sparse"]
+io = ["netCDF4", "h5netcdf", "scipy", 'pydap; python_version<"3.10"', "zarr", "fsspec", "cftime", "pooch"]
 parallel = ["dask[complete]"]
 viz = ["cartopy", "matplotlib", "nc-time-axis", "seaborn"]
 
@@ -234,39 +234,38 @@ extend-exclude = [
 ]
 
 [tool.ruff.lint]
+extend-safe-fixes = [
+  "TID252", # absolute imports
+]
 extend-select = [
-  "F",    # Pyflakes
-  "E",    # pycodestyle errors
-  "W",    # pycodestyle warnings
-  "I",    # isort
-  "UP",   # pyupgrade
-  "B",    # flake8-bugbear
-  "C4",   # flake8-comprehensions
-  "PIE",  # flake8-pie
-  "TID",  # flake8-tidy-imports (absolute imports)
-  "PGH",  # pygrep-hooks
+  "F", # Pyflakes
+  "E", # pycodestyle errors
+  "W", # pycodestyle warnings
+  "I", # isort
+  "UP", # pyupgrade
+  "B", # flake8-bugbear
+  "C4", # flake8-comprehensions
+  "PIE", # flake8-pie
+  "TID", # flake8-tidy-imports (absolute imports)
+  "PGH", # pygrep-hooks
   "PERF", # Perflint
   "RUF",
 ]
-extend-safe-fixes = [
-  "TID252",  # absolute imports
-]
 ignore = [
-  "E402",    # module level import not at top of file
-  "E501",    # line too long - let the formatter worry about that
-  "E731",    # do not assign a lambda expression, use a def
-  "UP007",   # use X | Y for type annotations
-  "UP027",   # deprecated
-  "C40",     # unnecessary generator, comprehension, or literal
-  "PIE790",  # unnecessary pass statement
+  "E402", # module level import not at top of file
+  "E501", # line too long - let the formatter worry about that
+  "E731", # do not assign a lambda expression, use a def
+  "UP007", # use X | Y for type annotations
+  "UP027", # deprecated
+  "C40", # unnecessary generator, comprehension, or literal
+  "PIE790", # unnecessary pass statement
   "PERF203", # try-except within a loop incurs performance overhead
-  "RUF001",  # string contains ambiguous unicode character
-  "RUF002",  # docstring contains ambiguous acute accent unicode character
-  "RUF003",  # comment contains ambiguous no-break space unicode character
-  "RUF005",  # consider upacking operator instead of concatenation
-  "RUF012",  # mutable class attributes
+  "RUF001", # string contains ambiguous unicode character
+  "RUF002", # docstring contains ambiguous acute accent unicode character
+  "RUF003", # comment contains ambiguous no-break space unicode character
+  "RUF005", # consider unpacking operator instead of concatenation
+  "RUF012", # mutable class attributes
 ]
-
 
 [tool.ruff.lint.per-file-ignores]
 # don't enforce absolute imports
@@ -349,3 +348,9 @@ test = "pytest"
 ignore = [
   "PP308", # This option creates a large amount of log lines.
 ]
+
+[tool.codespell]
+enable-color = true
+ignore-words-list = "nd,coo,COO,nin,Marge,Commun"
+quiet-level = 3
+skip = "whats-new.rst"
