--- a/pyproject.toml
+++ b/pyproject.toml
@@ -353,4 +353,4 @@ ignore = [
 enable-color = true
 ignore-words-list = "nd,coo,COO,nin,Marge,Commun"
 quiet-level = 3
-skip = "whats-new.rst"
+skip = "./doc/whats-new.rst"
