--- a/ci/requirements/environment-3.13.yml
+++ b/ci/requirements/environment-3.13.yml
@@ -22,8 +22,8 @@ dependencies:
   - matplotlib-base
   - nc-time-axis
   - netcdf4
-  # - numba
-  # - numbagg
+  - numba
+  - numbagg
   - numexpr
   - numpy
   - opt_einsum
@@ -43,7 +43,7 @@ dependencies:
   - rasterio
   - scipy
   - seaborn
-  # - sparse
+  - sparse
   - toolz
   - typing_extensions
   - zarr
