--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,23 +42,37 @@ repos:
       - id: prettier
         args: [--cache-location=.prettier_cache/cache]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.14.1
+    rev: v1.15.0
     hooks:
       - id: mypy
-        # Copied from setup.cfg
-        exclude: "properties|asv_bench"
+        files: "^xarray"
+        exclude: "^xarray/util/generate_.*\\.py$"
         # This is slow and so we take it out of the fast-path; requires passing
         # `--hook-stage manual` to pre-commit
         stages: [manual]
-        additional_dependencies: [
-            # Type stubs
-            types-python-dateutil,
-            types-setuptools,
-            types-PyYAML,
-            types-pytz,
-            typing-extensions>=4.1.0,
-            numpy,
-          ]
+        additional_dependencies:
+          # Type stubs plus additional dependencies from ci/requirements/environment.yml
+          # required in order to satisfy most (ideally all) type checks.  This is rather
+          # brittle, so it is difficult (if not impossible) to get mypy to succeed in
+          # this context, even when it succeeds in CI.
+          - dask
+          - distributed
+          - hypothesis
+          - matplotlib
+          - numpy==2.1.3
+          - pandas-stubs
+          - pytest
+          - types-colorama
+          - types-defusedxml
+          - types-docutils
+          - types-pexpect
+          - types-psutil
+          - types-Pygments
+          - types-python-dateutil
+          - types-pytz
+          - types-PyYAML
+          - types-setuptools
+          - typing-extensions>=4.1.0
   - repo: https://github.com/citation-file-format/cff-converter-python
     rev: ebf0b5e44d67f8beaa1cd13a0d0393ea04c6058d
     hooks:
