--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -33,6 +33,15 @@ jobs:
         with:
           keyword: "[skip-ci]"
 
+  detect-act:
+    name: Detect 'act' runner
+    runs-on: ubuntu-latest
+    outputs:
+      running: ${{ steps.detect-act.outputs.running }}
+    steps:
+      - id: detect-act
+        run: echo "running=${{ env.ACT || 'false' }}" >> "$GITHUB_OUTPUT"
+
   doctest:
     name: Doctests
     runs-on: "ubuntu-latest"
@@ -81,15 +90,23 @@ jobs:
           python -m pytest --doctest-modules xarray --ignore xarray/tests -Werror
 
   mypy:
-    name: Mypy
+    strategy:
+      matrix:
+        include:
+          - python-version: "3.10"
+            codecov-flags: mypy-min
+          - python-version: "3.12"
+            codecov-flags: mypy
+    name: Mypy ${{ matrix.python-version }}
     runs-on: "ubuntu-latest"
-    needs: detect-ci-trigger
+    needs: [detect-ci-trigger, detect-act]
+    if: always() && (needs.detect-ci-trigger.outputs.triggered == 'true' || needs.detect-act.outputs.running == 'true')
     defaults:
       run:
         shell: bash -l {0}
     env:
       CONDA_ENV_FILE: ci/requirements/environment.yml
-      PYTHON_VERSION: "3.12"
+      PYTHON_VERSION: ${{ matrix.python-version }}
 
     steps:
       - uses: actions/checkout@v4
@@ -116,68 +133,23 @@ jobs:
           python xarray/util/print_versions.py
       - name: Install mypy
         run: |
-          python -m pip install "mypy==1.15" --force-reinstall
+          python -m pip install "mypy==1.15" pytest-mypy-plugins --force-reinstall
 
       - name: Run mypy
         run: |
           python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report
 
-      - name: Upload mypy coverage to Codecov
-        uses: codecov/codecov-action@v5.3.1
-        with:
-          files: mypy_report/cobertura.xml
-          flags: mypy
-          env_vars: PYTHON_VERSION
-          name: codecov-umbrella
-          fail_ci_if_error: false
-
-  mypy-min:
-    name: Mypy 3.10
-    runs-on: "ubuntu-latest"
-    needs: detect-ci-trigger
-    defaults:
-      run:
-        shell: bash -l {0}
-    env:
-      CONDA_ENV_FILE: ci/requirements/environment.yml
-      PYTHON_VERSION: "3.10"
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Fetch all history for all branches and tags.
-
-      - name: set environment variables
+      - name: Run mypy tests
+        # Run pytest with mypy plugin even if mypy analysis in previous step fails.
+        if: ${{ always() }}
         run: |
-          echo "TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-      - name: Setup micromamba
-        uses: mamba-org/setup-micromamba@v2
-        with:
-          environment-file: ${{env.CONDA_ENV_FILE}}
-          environment-name: xarray-tests
-          create-args: >-
-            python=${{env.PYTHON_VERSION}}
-          cache-environment: true
-          cache-environment-key: "${{runner.os}}-${{runner.arch}}-py${{env.PYTHON_VERSION}}-${{env.TODAY}}-${{hashFiles(env.CONDA_ENV_FILE)}}"
-      - name: Install xarray
-        run: |
-          python -m pip install --no-deps -e .
-      - name: Version info
-        run: |
-          python xarray/util/print_versions.py
-      - name: Install mypy
-        run: |
-          python -m pip install "mypy==1.15" --force-reinstall
-
-      - name: Run mypy
-        run: |
-          python -m mypy --install-types --non-interactive --cobertura-xml-report mypy_report
+          python -m pytest -v --mypy-only-local-stub --mypy-pyproject-toml-file=pyproject.toml xarray/**/test_*.yml
 
       - name: Upload mypy coverage to Codecov
         uses: codecov/codecov-action@v5.3.1
         with:
           files: mypy_report/cobertura.xml
-          flags: mypy-min
+          flags: ${{ matrix.codecov-flags }}
           env_vars: PYTHON_VERSION
           name: codecov-umbrella
           fail_ci_if_error: false
