--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,5 @@
 [project]
-authors = [
-  { name = "xarray Developers", email = "xarray@googlegroups.com" },
-]
+authors = [{ name = "xarray Developers", email = "xarray@googlegroups.com" }]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
   "License :: OSI Approved :: Apache Software License",
@@ -21,11 +19,7 @@ name = "xarray"
 readme = "README.md"
 requires-python = ">=3.10"
 
-dependencies = [
-  "numpy>=1.24",
-  "packaging>=23.2",
-  "pandas>=2.1",
-]
+dependencies = ["numpy>=1.24", "packaging>=23.2", "pandas>=2.1"]
 
 # We don't encode minimum requirements here (though if we can write a script to
 # generate the text from `min_deps_check.py`, that's welcome...). We do add
@@ -63,6 +57,22 @@ io = [
 etc = ["sparse"]
 parallel = ["dask[complete]"]
 viz = ["cartopy", "matplotlib", "nc-time-axis", "seaborn"]
+type-stubs = [
+  "pandas-stubs",
+  "types-PyYAML",
+  "types-Pygments",
+  "types-colorama",
+  "types-decorator",
+  "types-defusedxml",
+  "types-docutils",
+  "types-networkx",
+  "types-pexpect",
+  "types-psutil",
+  "types-pycurl",
+  "types-python-dateutil",
+  "types-pytz",
+  "types-setuptools",
+]
 
 [project.urls]
 Documentation = "https://docs.xarray.dev"
@@ -76,10 +86,7 @@ dask = "xarray.namedarray.daskmanager:DaskManager"
 
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = [
-  "setuptools>=42",
-  "setuptools-scm>=7",
-]
+requires = ["setuptools>=42", "setuptools-scm>=7"]
 
 [tool.setuptools]
 packages = ["xarray"]
@@ -103,10 +110,7 @@ exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
 
 [tool.mypy]
 enable_error_code = ["ignore-without-code", "redundant-self", "redundant-expr"]
-exclude = [
-  'build',
-  'xarray/util/generate_.*\.py',
-]
+exclude = ['build', 'xarray/util/generate_.*\.py']
 files = "xarray"
 show_error_context = true
 warn_redundant_casts = true
@@ -237,10 +241,7 @@ module = ["xarray.namedarray.*", "xarray.tests.test_namedarray"]
 # reportMissingTypeStubs = false
 
 [tool.ruff]
-extend-exclude = [
-  "doc",
-  "_typed_ops.pyi",
-]
+extend-exclude = ["doc", "_typed_ops.pyi"]
 
 [tool.ruff.lint]
 extend-select = [
@@ -360,3 +361,61 @@ test = "pytest"
 ignore = [
   "PP308", # This option creates a large amount of log lines.
 ]
+
+[tool.typos]
+
+[tool.typos.default]
+extend-ignore-identifiers-re = [
+  # Variable names
+  "nd_.*",
+  ".*_nd",
+  "ba_.*",
+  ".*_ba",
+  "ser_.*",
+  ".*_ser",
+  # Function/class names
+  "NDArray.*",
+  ".*NDArray.*",
+]
+
+[tool.typos.default.extend-words]
+# NumPy function names
+arange = "arange"
+
+# Technical terms
+nd = "nd"
+nin = "nin"
+
+# Variable names
+ba = "ba"
+ser = "ser"
+fo = "fo"
+iy = "iy"
+vart = "vart"
+ede = "ede"
+
+# Organization/Institution names
+Stichting = "Stichting"
+Mathematisch = "Mathematisch"
+
+# People's names
+Soler = "Soler"
+Bruning = "Bruning"
+Tung = "Tung"
+Claus = "Claus"
+Celles = "Celles"
+slowy = "slowy"
+Commun = "Commun"
+
+# Tests
+Ome = "Ome"
+SUR = "SUR"
+Tio = "Tio"
+Ono = "Ono"
+abl = "abl"
+
+# Technical terms
+splitted = "splitted"
+childs = "childs"
+cutted = "cutted"
+LOCA = "LOCA"
