--- a/.github/workflows/ci-additional.yaml
+++ b/.github/workflows/ci-additional.yaml
@@ -133,7 +133,7 @@ jobs:
           python xarray/util/print_versions.py
       - name: Install mypy
         run: |
-          python -m pip install "mypy==1.15" pytest-mypy-plugins --force-reinstall
+          python -m pip install "mypy==1.15" pytest-mypy-plugins
 
       - name: Run mypy
         run: |
