--- a/ci/requirements/environment-3.14.yml
+++ b/ci/requirements/environment-3.14.yml
@@ -33,6 +33,7 @@ dependencies:
   - pip
   - pooch
   - pre-commit
+  - pyarrow # pandas raises a deprecation warning without this, breaking doctests
   - pydap
   - pytest
   - pytest-cov
