--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,12 +40,14 @@ dev = [
   "hypothesis",
   "jinja2",
   "mypy",
+  "pandas-stubs",
   "pre-commit",
   "pytest",
   "pytest-cov",
   "pytest-env",
-  "pytest-xdist",
+  "pytest-mypy-plugins",
   "pytest-timeout",
+  "pytest-xdist",
   "ruff>=0.8.0",
   "sphinx",
   "sphinx_autosummary_accessors",
@@ -304,7 +306,12 @@ known-first-party = ["xarray"]
 ban-relative-imports = "all"
 
 [tool.pytest.ini_options]
-addopts = ["--strict-config", "--strict-markers"]
+addopts = [
+  "--strict-config",
+  "--strict-markers",
+  "--mypy-only-local-stub",
+  "--mypy-pyproject-toml-file=pyproject.toml",
+]
 
 # We want to forbid warnings from within xarray in our tests — instead we should
 # fix our own code, or mark the test itself as expecting a warning. So this:
