--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ dev = [
   "ruff>=0.8.0",
   "sphinx",
   "sphinx_autosummary_accessors",
-  "xarray[complete]",
+  "xarray[complete,types]",
 ]
 io = [
   "netCDF4",
@@ -64,6 +64,21 @@ io = [
 etc = ["sparse"]
 parallel = ["dask[complete]"]
 viz = ["cartopy", "matplotlib", "nc-time-axis", "seaborn"]
+types = [
+  "pandas-stubs",
+  "types-PyYAML",
+  "types-Pygments",
+  "types-colorama",
+  "types-defusedxml",
+  "types-docutils",
+  "types-networkx",
+  "types-pexpect",
+  "types-psutil",
+  "types-pycurl",
+  "types-python-dateutil",
+  "types-pytz",
+  "types-setuptools",
+]
 
 [project.urls]
 Documentation = "https://docs.xarray.dev"
